# trade_app

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PRD.md  Quant_Trade_Advisor_PRD.docx  README.md  justfile  playwright.config.py  pyproject.toml
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-2-core-type-system-error-taxonomy.md  1-6-data-validation-anomaly-detection.md  2-3-vectorized-backtest-engine.md  deferred-work.md  epic-1-retrospective.md  sprint-status.yaml
configs/: sma_spy.yaml
docs/: ci.md  mt5-bridge-plan.md
frontend/: bridge.ts  esbuild.config.mjs  events.ts  package-lock.json  package.json  tsconfig.json
frontend/islands/: bridgeUtils.ts  dataQualityBadge.tsx  equityChart.tsx  walkForwardChart.tsx  windowTable.tsx
frontend/styles/: tokens.css
migrations/: README.md
migrations/manual/: 001_initial_placeholder.sql  002_dsr_backfill.sql
scripts/: README.md  bmad-to-serena.py  ci-local.sh  graphify-to-serena.py  serena-context-for-bmad.py  sync-all.sh  test-changed.sh
src/trade_advisor/: api.py  cli.py  config.py  main.py
src/trade_advisor/backtest/: _equity.py  baseline.py  costs.py  engine.py  event_driven.py  execution.py  integrity.py  protocols.py  regime.py  vectorized.py
src/trade_advisor/core/: __init__.py  config.py  container.py  errors.py  logging.py  schemas.py  secrets.py  types.py
src/trade_advisor/data/: cache.py  schemas.py  sources.py  storage.py  validation.py
src/trade_advisor/evaluation/: metrics.py
src/trade_advisor/experiments/: __init__.py  compare.py  lineage.py  reproduction.py  tracker.py
src/trade_advisor/infra/: db.py  migrate.py  protocols.py  seed.py  tasks.py
src/trade_advisor/migrations/: __init__.py  auto.py  validate.py
src/trade_advisor/ml/: __init__.py  backtest_adapter.py
src/trade_advisor/strategies/: base.py  interface.py  schemas.py  sizing.py  sma_cross.py
src/trade_advisor/tracking/: mlflow_utils.py
src/trade_advisor/ui/: app.py
src/trade_advisor/web/: csrf.py  events.py  models.py  sse.py
tests/: conftest.py  framework-setup-progress.md  helpers.py  test_backtest.py  test_cache.py  test_config.py  test_container.py  test_import_contracts.py  test_information_latency.py  test_metrics.py  test_result_store.py  test_review_fixes.py  test_scaffold.py  test_story_4_1a_walkforward.py  test_story_4_2_optimize.py  test_story_4_3_frozen_params.py  test_story_4_4_stitching.py  test_story_4_5_deflated.py  test_strategy.py  test_strategy_interface.py
tests/_test-reviews/: test-review-epic4-2026-05-04.md
tests/api/: test_walkforward_api.py
tests/atdd/epic1/: conftest.py  test_story_1_1_scaffolding.py  test_story_1_2_types_errors.py  (+10 more)
tests/convergence/: conftest.py  test_engine_convergence.py  test_engine_convergence_hypothesis.py
tests/e2e/: conftest.py  conftest_bridge.py  test_bridge_lifecycle.py  test_dashboard.py  test_walkforward_dashboard.py
tests/integration/: conftest.py  test_example_integration.py
tests/property/: test_backtest_invariants.py  test_signal_properties.py  test_validation_properties.py
tests/test-artifacts/: automation-summary.md  test-review.md
tests/unit/: conftest.py  test_api_deprecation.py  test_baseline_integrity.py  test_compare_extended.py  test_costs.py  test_evaluation_metrics.py  test_event_driven_engine.py  test_example_enhanced.py  test_execution.py  test_experiment_compare.py  test_experiment_lineage.py  test_experiment_list_runs.py  test_experiment_reproduction.py  test_lineage_extended.py  test_metrics.py  test_metrics_helpers.py  test_reproduction_extended.py  test_sizing.py  test_tracker_extended.py  test_vectorized_engine.py  test_walkforward_async.py
(+113 files in other folders)
