[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-advisor"
version = "0.1.0"
description = "Local-first quant trade advisor with backtesting, walk-forward, and ML"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
authors = [{ name = "Quant Mantis" }]

dependencies = [
    "yfinance>=0.2.36,<0.3",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "pyarrow>=14,<20",
    "pandas-ta>=0.4.67b0,<1",
    "duckdb>=1.0,<1.2",
    "mlflow>=2.14,<3",
    "structlog>=24.1,<26",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "keyring>=25.1,<26",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "streamlit>=1.36,<2",
    "plotly>=5.22,<6",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-xdist>=3.6,<4",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
    "httpx>=0.27,<1",
    "types-pyyaml>=6.0,<7",
    "pandas-stubs>=2.2,<3",
]

[project.scripts]
ta = "trade_advisor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_advisor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pandas_ta.*", "yfinance.*", "plotly.*", "streamlit.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --ignore=tests/e2e"
markers = [
    "integration: requires network access (yfinance, external APIs)",
    "e2e: end-to-end tests requiring full system",
    "slow: tests exceeding 5 seconds",
]
